# Victim

./: CHANGELOG.md  Dockerfile  LICENSE  Main.hs  README.md  TODO  Victim.cabal  setup.sh
Language/: Environment.hs  Interpreter.hs  Parser.hs  Types.hs  Victim.gram
examples/: anonymous.v  case.v  factorial.v  fibonacci.v  for.v  scope.v  while.v
