cabal-version:      2.4
name:               Victim
version:            0.1.1.0

extra-source-files: CHANGELOG.md

executable Victim
    main-is:          Main.hs
    other-modules:
        Language.Types
        Language.Parser
        Language.Environment
        Language.Interpreter
            
    build-depends:    base ^>=4.14.3.0, parsec, containers, mtl, process
    default-language: Haskell2010
